@@ -1,5 +1,5 @@
 /*
- * Copyright 2000-2025 Vaadin Ltd.
+ * Copyright 2000-2026 Vaadin Ltd.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
@@ -25,6 +25,7 @@ import java.io.UncheckedIOException;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
@@ -33,7 +34,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
@@ -48,7 +48,6 @@ import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -61,16 +60,18 @@ import com.vaadin.base.devserver.stats.StatisticsStorage;
 import com.vaadin.base.devserver.viteproxy.ViteWebsocketEndpoint;
 import com.vaadin.experimental.FeatureFlags;
 import com.vaadin.flow.di.Lookup;
+import com.vaadin.flow.di.ResourceProvider;
 import com.vaadin.flow.internal.DevModeHandler;
+import com.vaadin.flow.internal.FrontendUtils;
 import com.vaadin.flow.server.Constants;
-import com.vaadin.flow.server.ExecutionFailedException;
 import com.vaadin.flow.server.InitParameters;
 import com.vaadin.flow.server.Mode;
 import com.vaadin.flow.server.VaadinContext;
 import com.vaadin.flow.server.VaadinServlet;
-import com.vaadin.flow.server.frontend.FrontendUtils;
+import com.vaadin.flow.server.frontend.ExecutionFailedException;
 import com.vaadin.flow.server.frontend.NodeTasks;
 import com.vaadin.flow.server.frontend.Options;
+import com.vaadin.flow.server.frontend.installer.NodeInstaller;
 import com.vaadin.flow.server.frontend.scanner.ClassFinder;
 import com.vaadin.flow.server.frontend.scanner.ClassFinder.DefaultClassFinder;
 import com.vaadin.flow.server.startup.ApplicationConfiguration;
@@ -81,10 +82,13 @@ import static com.vaadin.flow.server.Constants.PACKAGE_JSON;
 import static com.vaadin.flow.server.Constants.PROJECT_FRONTEND_GENERATED_DIR_TOKEN;
 import static com.vaadin.flow.server.Constants.VAADIN_SERVLET_RESOURCES;
 import static com.vaadin.flow.server.Constants.VAADIN_WEBAPP_RESOURCES;
+import static com.vaadin.flow.server.InitParameters.NODE_DOWNLOAD_ROOT;
+import static com.vaadin.flow.server.InitParameters.NODE_FOLDER;
+import static com.vaadin.flow.server.InitParameters.NODE_VERSION;
 import static com.vaadin.flow.server.InitParameters.NPM_EXCLUDE_WEB_COMPONENTS;
 import static com.vaadin.flow.server.InitParameters.REACT_ENABLE;
 import static com.vaadin.flow.server.InitParameters.SERVLET_PARAMETER_DEVMODE_OPTIMIZE_BUNDLE;
-import static com.vaadin.flow.server.frontend.FrontendUtils.GENERATED;
+import static com.vaadin.flow.server.frontend.FrontendTools.DEFAULT_NODE_VERSION;
 
 /**
  * Initializer for starting node updaters as well as the dev mode server.
@@ -220,7 +224,7 @@ public class DevModeInitializer implements Serializable {
         Options options = new Options(lookup, baseDir)
                 .withFrontendDirectory(frontendFolder)
                 .withFrontendGeneratedFolder(
-                        new File(frontendFolder + GENERATED))
+                        new File(frontendFolder + FrontendUtils.GENERATED))
                 .withBuildDirectory(config.getBuildFolder());
 
         log().info("Starting dev-mode updaters in {} folder.",
@@ -244,8 +248,10 @@ public class DevModeInitializer implements Serializable {
             options.createMissingPackageJson(true);
         }
 
-        Set<File> frontendLocations = getFrontendLocationsFromClassloader(
-                DevModeStartupListener.class.getClassLoader());
+        ResourceProvider resourceProvider = lookup
+                .lookup(ResourceProvider.class);
+        Set<File> frontendLocations = getFrontendLocationsFromResourceProvider(
+                resourceProvider);
 
         boolean useByteCodeScanner = config.getBooleanProperty(
                 SERVLET_PARAMETER_DEVMODE_OPTIMIZE_BUNDLE,
@@ -268,7 +274,8 @@ public class DevModeInitializer implements Serializable {
 
         String frontendGeneratedFolderName = config.getStringProperty(
                 PROJECT_FRONTEND_GENERATED_DIR_TOKEN,
-                Paths.get(frontendFolder.getPath(), GENERATED).toString());
+                Paths.get(frontendFolder.getPath(), FrontendUtils.GENERATED)
+                        .toString());
         File frontendGeneratedFolder = new File(frontendGeneratedFolderName);
         File jarFrontendResourcesFolder = new File(frontendGeneratedFolder,
                 FrontendUtils.JAR_RESOURCES_FOLDER);
@@ -301,7 +308,13 @@ public class DevModeInitializer implements Serializable {
                 .withFrontendExtraFileExtensions(
                         getFrontendExtraFileExtensions(config))
                 .withReact(reactEnable)
-                .withNpmExcludeWebComponents(npmExcludeWebComponents);
+                .withNpmExcludeWebComponents(npmExcludeWebComponents)
+                .withNodeVersion(config.getStringProperty(NODE_VERSION,
+                        DEFAULT_NODE_VERSION))
+                .withNodeFolder(config.getStringProperty(NODE_FOLDER, null))
+                .withNodeDownloadRoot(
+                        URI.create(config.getStringProperty(NODE_DOWNLOAD_ROOT,
+                                NodeInstaller.DEFAULT_NODEJS_DOWNLOAD_ROOT)));
 
         // Do not execute inside runnable thread as static mocking doesn't work.
         NodeTasks tasks = new NodeTasks(options);
@@ -358,15 +371,17 @@ public class DevModeInitializer implements Serializable {
      * META-INF/resources/frontend and META-INF/resources/themes folder. We
      * don't use URLClassLoader because will fail in Java 9+
      */
-    static Set<File> getFrontendLocationsFromClassloader(
-            ClassLoader classLoader) throws VaadinInitializerException {
+    static Set<File> getFrontendLocationsFromResourceProvider(
+            ResourceProvider resourceProvider)
+            throws VaadinInitializerException {
         Set<File> frontendFiles = new HashSet<>();
-        frontendFiles.addAll(getFrontendLocationsFromClassloader(classLoader,
-                Constants.RESOURCES_FRONTEND_DEFAULT));
-        frontendFiles.addAll(getFrontendLocationsFromClassloader(classLoader,
-                Constants.COMPATIBILITY_RESOURCES_FRONTEND_DEFAULT));
-        frontendFiles.addAll(getFrontendLocationsFromClassloader(classLoader,
-                Constants.RESOURCES_THEME_JAR_DEFAULT));
+        frontendFiles.addAll(getFrontendLocationsFromResourceProvider(
+                resourceProvider, Constants.RESOURCES_FRONTEND_DEFAULT));
+        frontendFiles.addAll(
+                getFrontendLocationsFromResourceProvider(resourceProvider,
+                        Constants.COMPATIBILITY_RESOURCES_FRONTEND_DEFAULT));
+        frontendFiles.addAll(getFrontendLocationsFromResourceProvider(
+                resourceProvider, Constants.RESOURCES_THEME_JAR_DEFAULT));
         return frontendFiles;
     }
 
@@ -381,22 +396,22 @@ public class DevModeInitializer implements Serializable {
         }
     }
 
-    private static Set<File> getFrontendLocationsFromClassloader(
-            ClassLoader classLoader, String resourcesFolder)
+    private static Set<File> getFrontendLocationsFromResourceProvider(
+            ResourceProvider resourceProvider, String resourcesFolder)
             throws VaadinInitializerException {
         Set<File> frontendFiles = new HashSet<>();
         try {
-            Enumeration<URL> en = classLoader.getResources(resourcesFolder);
+            List<URL> en = resourceProvider
+                    .getApplicationResources(resourcesFolder);
             if (en == null) {
                 return frontendFiles;
             }
             Set<String> vfsJars = new HashSet<>();
-            while (en.hasMoreElements()) {
-                URL url = en.nextElement();
+            for (URL url : en) {
                 String urlString = url.toString();
 
                 String path = URLDecoder.decode(url.getPath(),
-                        StandardCharsets.UTF_8.name());
+                        StandardCharsets.UTF_8);
                 Matcher jarMatcher = JAR_FILE_REGEX.matcher(path);
                 Matcher zipProtocolJarMatcher = ZIP_PROTOCOL_JAR_FILE_REGEX
                         .matcher(path);
@@ -410,12 +425,14 @@ public class DevModeInitializer implements Serializable {
                 if (jarVfsMatcher.find()) {
                     String vfsJar = jarVfsMatcher.group(1);
                     if (vfsJars.add(vfsJar)) { // NOSONAR
-                        frontendFiles.add(
-                                getPhysicalFileOfJBossVfsJar(new URL(vfsJar)));
+                        frontendFiles.add(getPhysicalFileOfJBossVfsJar(
+                                URI.create(vfsJar).toURL()));
                     }
                 } else if (dirVfsMatcher.find()) {
-                    URL vfsDirUrl = new URL(urlString.substring(0,
-                            urlString.lastIndexOf(resourcesFolder)));
+                    URL vfsDirUrl = URI
+                            .create(urlString.substring(0,
+                                    urlString.lastIndexOf(resourcesFolder)))
+                            .toURL();
                     frontendFiles
                             .add(getPhysicalFileOfJBossVfsDirectory(vfsDirUrl));
                 } else if (jarMatcher.find()) {
@@ -447,7 +464,7 @@ public class DevModeInitializer implements Serializable {
             throws IOException, VaadinInitializerException {
         try {
             Object virtualFile = url.openConnection().getContent();
-            Class virtualFileClass = virtualFile.getClass();
+            Class<?> virtualFileClass = virtualFile.getClass();
 
             // Reflection as we cannot afford a dependency to
             // WildFly or JBoss
@@ -463,7 +480,7 @@ public class DevModeInitializer implements Serializable {
             // are created. Later, these physical files are scanned
             // to collect
             // their resources.
-            List virtualFiles = (List) getChildrenRecursivelyMethod
+            List<?> virtualFiles = (List<?>) getChildrenRecursivelyMethod
                     .invoke(virtualFile);
             File rootDirectory = (File) getPhysicalFileMethod
                     .invoke(virtualFile);
@@ -510,7 +527,7 @@ public class DevModeInitializer implements Serializable {
         // We should use reflection to use JBoss VFS API as we cannot
         // afford a
         // dependency to WildFly or JBoss
-        Class virtualFileClass = jarVirtualFile.getClass();
+        Class<?> virtualFileClass = jarVirtualFile.getClass();
         Method getChildrenRecursivelyMethod = virtualFileClass
                 .getMethod("getChildrenRecursively");
         Method openStreamMethod = virtualFileClass.getMethod("openStream");
@@ -518,7 +535,7 @@ public class DevModeInitializer implements Serializable {
         Method getPathNameRelativeToMethod = virtualFileClass
                 .getMethod("getPathNameRelativeTo", virtualFileClass);
 
-        List jarVirtualChildren = (List) getChildrenRecursivelyMethod
+        List<?> jarVirtualChildren = (List<?>) getChildrenRecursivelyMethod
                 .invoke(jarVirtualFile);
         try (ZipOutputStream zipOutputStream = new ZipOutputStream(
                 Files.newOutputStream(tempJar))) {
@@ -528,12 +545,13 @@ public class DevModeInitializer implements Serializable {
 
                 String relativePath = (String) getPathNameRelativeToMethod
                         .invoke(child, jarVirtualFile);
-                InputStream inputStream = (InputStream) openStreamMethod
-                        .invoke(child);
-                ZipEntry zipEntry = new ZipEntry(relativePath);
-                zipOutputStream.putNextEntry(zipEntry);
-                IOUtils.copy(inputStream, zipOutputStream);
-                zipOutputStream.closeEntry();
+                try (InputStream inputStream = (InputStream) openStreamMethod
+                        .invoke(child)) {
+                    ZipEntry zipEntry = new ZipEntry(relativePath);
+                    zipOutputStream.putNextEntry(zipEntry);
+                    inputStream.transferTo(zipOutputStream);
+                    zipOutputStream.closeEntry();
+                }
             }
         }
     }
